# market

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
market/: __init__.py  cart.py  hooks.py  utils.py
market/config/: desktop.py  docs.py
market/market/doctype/bancadas/: bancadas.js  bancadas.json  bancadas.py  test_bancadas.py
market/public/store1/: index.html
market/public/store1/assets/: UserAccount-DN4BoBm0.js  index-B_b5I-mM.css  index-DEyUab_n.js
public/: index.html
src/: App.vue  main.ts  shims-vue1.d.ts
src/components/: Category.vue  Footer.vue  Navbar.vue  Pack.vue  Product.vue  ProductDetail.vue  card.vue
src/plugins/: vuetify.ts
src/router/: index.ts
src/views/: BancadasPage.vue  HomeView.vue  StandDetail.vue  StandDetail1.vue
store1/: index.html  package-lock.json  package.json  vite.config.ts
store1/src/: App.vue  index.css  main.ts  shims-vue1.d.ts  style.css
store1/src/components/: Category.vue  Footer.vue  HelloWorld.vue  Navbar.vue  Pack.vue  Product.vue  ProductDetail.vue  card.vue
store1/src/plugins/: vuetify.ts
store1/src/router/: auth.js  index.js
store1/src/views/: BancadasPage.vue  Home.vue  HowItWorks.vue  Login.vue  OurHistory.vue  PaymentOptions.vue  Returns.vue  Signup.vue  StandDetail1.vue  TermsOfUse.vue  UserAccount.vue  Warranty.vue
