[project]
name = "market"
authors = [
    { name = "Diogo Miguel", email = "maguinhomast2005@gmail.com"}
]
description = "Mercado digital que permite a criação de bancadas online, onde vendedores podem cadastrar e gerenciar seus produtos para venda direta ao consumidor. Oferece um espaço personalizado para cada vendedor, facilitando o controle de produtos, preços e inventário, além de oferecer uma experiência de compra simples e integrada para os clientes."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
